openturns/1.23/_sources/auto_data_analysis/index.rst.txt
:orphan:

.. _Data analysis:

Data analysis
=============



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. thumbnail-parent-div-close

.. raw:: html

    </div>


Manage data and samples
-----------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Link Pandas and OpenTURNS">

.. only:: html

  .. image:: /auto_data_analysis/manage_data_and_samples/images/thumb/sphx_glr_plot_sample_pandas_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_manage_data_and_samples_plot_sample_pandas.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Link Pandas and OpenTURNS</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Randomize the lines of a Sample">

.. only:: html

  .. image:: /auto_data_analysis/manage_data_and_samples/images/thumb/sphx_glr_plot_randomize_sample_lines_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_manage_data_and_samples_plot_randomize_sample_lines.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Randomize the lines of a Sample</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Import / export a sample via a CSV file">

.. only:: html

  .. image:: /auto_data_analysis/manage_data_and_samples/images/thumb/sphx_glr_plot_import_export_sample_csv_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_manage_data_and_samples_plot_import_export_sample_csv.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Import / export a sample via a CSV file</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate moments from sample">

.. only:: html

  .. image:: /auto_data_analysis/manage_data_and_samples/images/thumb/sphx_glr_plot_estimate_moments_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_manage_data_and_samples_plot_estimate_moments.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate moments from sample</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sample manipulation">

.. only:: html

  .. image:: /auto_data_analysis/manage_data_and_samples/images/thumb/sphx_glr_plot_sample_manipulation_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_manage_data_and_samples_plot_sample_manipulation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sample manipulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sort a sample">

.. only:: html

  .. image:: /auto_data_analysis/manage_data_and_samples/images/thumb/sphx_glr_plot_sort_sample_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_manage_data_and_samples_plot_sort_sample.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sort a sample</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="A quick start guide to the Point and Sample classes">

.. only:: html

  .. image:: /auto_data_analysis/manage_data_and_samples/images/thumb/sphx_glr_plot_quick_start_point_and_sample_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_manage_data_and_samples_plot_quick_start_point_and_sample.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">A quick start guide to the Point and Sample classes</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate Wilks and empirical quantile">

.. only:: html

  .. image:: /auto_data_analysis/manage_data_and_samples/images/thumb/sphx_glr_plot_quantile_estimation_wilks_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_manage_data_and_samples_plot_quantile_estimation_wilks.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate Wilks and empirical quantile</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Build and validate a linear model">

.. only:: html

  .. image:: /auto_data_analysis/manage_data_and_samples/images/thumb/sphx_glr_plot_linear_regression_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_manage_data_and_samples_plot_linear_regression.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Build and validate a linear model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate correlation coefficients">

.. only:: html

  .. image:: /auto_data_analysis/manage_data_and_samples/images/thumb/sphx_glr_plot_sample_correlation_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_manage_data_and_samples_plot_sample_correlation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate correlation coefficients</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Sample analysis
---------------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Draw an histogram">

.. only:: html

  .. image:: /auto_data_analysis/sample_analysis/images/thumb/sphx_glr_plot_visualize_histogram_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_sample_analysis_plot_visualize_histogram.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Draw an histogram</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Draw the empirical CDF">

.. only:: html

  .. image:: /auto_data_analysis/sample_analysis/images/thumb/sphx_glr_plot_visualize_empirical_cdf_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_sample_analysis_plot_visualize_empirical_cdf.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Draw the empirical CDF</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compare unconditional and conditional histograms">

.. only:: html

  .. image:: /auto_data_analysis/sample_analysis/images/thumb/sphx_glr_plot_compare_unconditional_conditional_histograms_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_sample_analysis_plot_compare_unconditional_conditional_histograms.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compare unconditional and conditional histograms</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compute squared SRC indices confidence intervals">

.. only:: html

  .. image:: /auto_data_analysis/sample_analysis/images/thumb/sphx_glr_plot_src_confidence_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_sample_analysis_plot_src_confidence.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compute squared SRC indices confidence intervals</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Draw a survival function">

.. only:: html

  .. image:: /auto_data_analysis/sample_analysis/images/thumb/sphx_glr_plot_draw_survival_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_sample_analysis_plot_draw_survival.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Draw a survival function</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Distribution fitting
--------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Fit a distribution by maximum likelihood">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_maximumlikelihood_estimator_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_maximumlikelihood_estimator.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fit a distribution by maximum likelihood</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Fit a parametric distribution">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_estimate_normal_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_estimate_normal.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fit a parametric distribution</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Model a singular multivariate distribution">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_model_singular_multivariate_distribution_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_model_singular_multivariate_distribution.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Model a singular multivariate distribution</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Define a distribution from quantiles">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_quantilematching_estimator_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_quantilematching_estimator.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Define a distribution from quantiles</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Get the asymptotic distribution of the estimators">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_asymptotic_estimators_distribution_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_asymptotic_estimators_distribution.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Get the asymptotic distribution of the estimators</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a GEV on the Venice sea-levels data">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_estimate_gev_venice_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_estimate_gev_venice.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a GEV on the Venice sea-levels data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Bandwidth sensitivity in kernel smoothing">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_smoothing_mixture_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_smoothing_mixture.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bandwidth sensitivity in kernel smoothing</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Fit an extreme value distribution">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_fit_extreme_value_distribution_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_fit_extreme_value_distribution.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fit an extreme value distribution</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a conditional quantile">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_estimate_conditional_quantile_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_estimate_conditional_quantile.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a conditional quantile</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a multivariate distribution">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_estimate_multivariate_distribution_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_estimate_multivariate_distribution.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a multivariate distribution</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a GPD on the Wooster temperature data">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_estimate_gpd_wooster_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_estimate_gpd_wooster.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a GPD on the Wooster temperature data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a GPD on the Dow Jones Index data">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_estimate_gpd_dowjones_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_estimate_gpd_dowjones.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a GPD on the Dow Jones Index data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Fit a non parametric distribution">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_estimate_non_parametric_distribution_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_estimate_non_parametric_distribution.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fit a non parametric distribution</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Fitting a distribution with customized maximum likelihood">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_advanced_mle_estimator_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_advanced_mle_estimator.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fitting a distribution with customized maximum likelihood</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a GEV on the Port Pirie sea-levels data">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_estimate_gev_pirie_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_estimate_gev_pirie.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a GEV on the Port Pirie sea-levels data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a GPD on the daily rainfall data">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_estimate_gpd_rain_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_estimate_gpd_rain.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a GPD on the daily rainfall data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a GEV on race times data">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_estimate_gev_racetime_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_estimate_gev_racetime.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a GEV on race times data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a GEV on the Fremantle sea-levels data">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_estimate_gev_fremantle_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_estimate_gev_fremantle.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a GEV on the Fremantle sea-levels data</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Statistical tests
-----------------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Test a discrete distribution">

.. only:: html

  .. image:: /auto_data_analysis/statistical_tests/images/thumb/sphx_glr_plot_chi2_fitting_test_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_statistical_tests_plot_chi2_fitting_test.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Test a discrete distribution</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Draw the QQ-Plot">

.. only:: html

  .. image:: /auto_data_analysis/statistical_tests/images/thumb/sphx_glr_plot_qqplot_graph_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_statistical_tests_plot_qqplot_graph.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Draw the QQ-Plot</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the Kolmogorov/Lilliefors test">

.. only:: html

  .. image:: /auto_data_analysis/statistical_tests/images/thumb/sphx_glr_plot_kolmogorov_test_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_statistical_tests_plot_kolmogorov_test.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use the Kolmogorov/Lilliefors test</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Test identical distributions">

.. only:: html

  .. image:: /auto_data_analysis/statistical_tests/images/thumb/sphx_glr_plot_smirnov_test_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_statistical_tests_plot_smirnov_test.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Test identical distributions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Select fitted distributions">

.. only:: html

  .. image:: /auto_data_analysis/statistical_tests/images/thumb/sphx_glr_plot_fitted_distribution_ranking_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_statistical_tests_plot_fitted_distribution_ranking.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Select fitted distributions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Test Normality">

.. only:: html

  .. image:: /auto_data_analysis/statistical_tests/images/thumb/sphx_glr_plot_test_normality_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_statistical_tests_plot_test_normality.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Test Normality</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Test independence">

.. only:: html

  .. image:: /auto_data_analysis/statistical_tests/images/thumb/sphx_glr_plot_test_independence_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_statistical_tests_plot_test_independence.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Test independence</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Test the copula">

.. only:: html

  .. image:: /auto_data_analysis/statistical_tests/images/thumb/sphx_glr_plot_test_copula_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_statistical_tests_plot_test_copula.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Test the copula</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kolmogorov-Smirnov : understand the p-value">

.. only:: html

  .. image:: /auto_data_analysis/statistical_tests/images/thumb/sphx_glr_plot_kolmogorov_pvalue_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_statistical_tests_plot_kolmogorov_pvalue.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kolmogorov-Smirnov : understand the p-value</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kolmogorov-Smirnov : understand the statistics">

.. only:: html

  .. image:: /auto_data_analysis/statistical_tests/images/thumb/sphx_glr_plot_kolmogorov_statistics_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_statistical_tests_plot_kolmogorov_statistics.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kolmogorov-Smirnov : understand the statistics</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kolmogorov-Smirnov : get the statistics distribution">

.. only:: html

  .. image:: /auto_data_analysis/statistical_tests/images/thumb/sphx_glr_plot_kolmogorov_distribution_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_statistical_tests_plot_kolmogorov_distribution.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kolmogorov-Smirnov : get the statistics distribution</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Estimate dependency and copulas
-------------------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Fit a parametric copula">

.. only:: html

  .. image:: /auto_data_analysis/estimate_dependency_and_copulas/images/thumb/sphx_glr_plot_estimate_copula_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_estimate_dependency_and_copulas_plot_estimate_copula.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fit a parametric copula</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Fit a non parametric copula">

.. only:: html

  .. image:: /auto_data_analysis/estimate_dependency_and_copulas/images/thumb/sphx_glr_plot_estimate_non_parametric_copula_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_estimate_dependency_and_copulas_plot_estimate_non_parametric_copula.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fit a non parametric copula</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate tail dependence coefficients on the wave-surge data">

.. only:: html

  .. image:: /auto_data_analysis/estimate_dependency_and_copulas/images/thumb/sphx_glr_plot_estimate_dependence_wavesurge_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_estimate_dependency_and_copulas_plot_estimate_dependence_wavesurge.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate tail dependence coefficients on the wave-surge data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate tail dependence coefficients on the wind data">

.. only:: html

  .. image:: /auto_data_analysis/estimate_dependency_and_copulas/images/thumb/sphx_glr_plot_estimate_dependence_wind_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_estimate_dependency_and_copulas_plot_estimate_dependence_wind.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate tail dependence coefficients on the wind data</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Estimate stochastic processes
-----------------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a multivariate ARMA process">

.. only:: html

  .. image:: /auto_data_analysis/estimate_stochastic_processes/images/thumb/sphx_glr_plot_estimate_multivariate_arma_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_estimate_stochastic_processes_plot_estimate_multivariate_arma.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a multivariate ARMA process</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a non stationary covariance function">

.. only:: html

  .. image:: /auto_data_analysis/estimate_stochastic_processes/images/thumb/sphx_glr_plot_estimate_non_stationary_covariance_model_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_estimate_stochastic_processes_plot_estimate_non_stationary_covariance_model.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a non stationary covariance function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a scalar ARMA process">

.. only:: html

  .. image:: /auto_data_analysis/estimate_stochastic_processes/images/thumb/sphx_glr_plot_estimate_arma_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_estimate_stochastic_processes_plot_estimate_arma.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a scalar ARMA process</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a spectral density function">

.. only:: html

  .. image:: /auto_data_analysis/estimate_stochastic_processes/images/thumb/sphx_glr_plot_estimate_spectral_density_function_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_estimate_stochastic_processes_plot_estimate_spectral_density_function.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a spectral density function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a stationary covariance function">

.. only:: html

  .. image:: /auto_data_analysis/estimate_stochastic_processes/images/thumb/sphx_glr_plot_estimate_stationary_covariance_model_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_estimate_stochastic_processes_plot_estimate_stationary_covariance_model.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a stationary covariance function</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Graphics
--------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Visualize pairs">

.. only:: html

  .. image:: /auto_data_analysis/graphics/images/thumb/sphx_glr_plot_visualize_pairs_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_graphics_plot_visualize_pairs.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Visualize pairs</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Visualize clouds">

.. only:: html

  .. image:: /auto_data_analysis/graphics/images/thumb/sphx_glr_plot_visualize_clouds_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_graphics_plot_visualize_clouds.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Visualize clouds</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Visualize sensitivity">

.. only:: html

  .. image:: /auto_data_analysis/graphics/images/thumb/sphx_glr_plot_sensitivity_par_coo_ishigami_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_graphics_plot_sensitivity_par_coo_ishigami.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Visualize sensitivity</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /auto_data_analysis/manage_data_and_samples/index.rst
   /auto_data_analysis/sample_analysis/index.rst
   /auto_data_analysis/distribution_fitting/index.rst
   /auto_data_analysis/statistical_tests/index.rst
   /auto_data_analysis/estimate_dependency_and_copulas/index.rst
   /auto_data_analysis/estimate_stochastic_processes/index.rst
   /auto_data_analysis/graphics/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: auto_data_analysis_python.zip </auto_data_analysis/auto_data_analysis_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: auto_data_analysis_jupyter.zip </auto_data_analysis/auto_data_analysis_jupyter.zip>`
